[package]
name = "tree-sitter-gabc"
description = "a simple notation based exclusively on ASCII characters that enables the user to describe Gregorian chant scores"
version = "0.1.0"
authors = ["Alex Harter <alex@harter.tech>"]
license = "GPLv3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gabc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/alexharter/tree-sitter-gabc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
