[package]
name = "tree-sitter-gabc"
description = "A notation for representing Gregorian chant using ASCII characters."
version = "0.1.0"
authors = ["Alex Harter <alex@harter.tech>"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gabc"]
categories = ["parsing", "text-editors"]
repository = "https://gregorio-project.github.io/gabc/index"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
