[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gabc"
description = "a simple notation based exclusively on ASCII characters that enables the user to describe Gregorian chant scores"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "gabc"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Alex Harter", email = "alex@harter.tech" }]
requires-python = ">=3.9"
license.text = "GPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/alexharter/tree-sitter-gabc"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
