[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gabc"
description = "A notation for representing Gregorian chant using ASCII characters."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "gabc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Alex Harter", email = "alex@harter.tech" }]
requires-python = ">=3.9"
license.text = "GPL-3.0"
readme = "README.md"

[project.urls]
Homepage = "https://gregorio-project.github.io/gabc/index"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
